--- a/css/global.css
+++ b/css/global.css
@@ -10,3 +10,25 @@
 .silver {
     @apply bg-gradient-to-r from-gray-100 to-gray-300;
 }
+
+/** Button. */
+.button-primary {
+    @apply text-white bg-amber-700 hover:bg-amber-800 focus:ring-4 focus:outline-none focus:ring-amber-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-amber-600 dark:hover:bg-amber-700 dark:focus:ring-amber-800;
+}
+
+.button-primary:disabled {
+    @apply text-white bg-amber-400 dark:bg-amber-500 cursor-not-allowed font-medium rounded-lg text-sm px-5 py-2.5 text-center;
+}
+
+/** Input. */
+.input-success {
+    @apply bg-slate-100 border border-slate-400 text-gray-900 text-sm rounded-lg block w-full p-2.5 focus:outline-none;
+}
+
+.input-error {
+    @apply bg-red-100 border border-red-400 text-red-900 text-sm rounded-lg block w-full p-2.5 focus:outline-none;
+}
+
+.input-message {
+    @apply mt-2 text-xs text-red-600 dark:text-red-400;
+}
