--- a/css/global.css
+++ b/css/global.css
@@ -13,11 +13,15 @@
 
 /** Button. */
 .button-primary {
-    @apply text-white bg-amber-700 hover:bg-amber-800 focus:ring-4 focus:outline-none focus:ring-amber-300 font-medium rounded-lg w-full text-sm px-5 py-2.5 text-center dark:bg-amber-600 dark:hover:bg-amber-700 dark:focus:ring-amber-800;
+    @apply cursor-pointer text-white bg-amber-700 hover:bg-amber-800 focus:ring-4 focus:outline-none focus:ring-amber-300 font-medium rounded-lg w-full text-sm px-5 py-2.5 text-center;
 }
 
 .button-primary:disabled {
-    @apply text-white bg-amber-400 dark:bg-amber-500 cursor-not-allowed font-medium rounded-lg text-sm px-5 py-2.5 text-center;
+    @apply text-white bg-amber-400 cursor-not-allowed font-medium rounded-lg text-sm px-5 py-2.5 text-center;
+}
+
+.button-delete {
+    @apply cursor-pointer text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg w-full text-sm px-5 py-2.5 text-center;
 }
 
 /** Input. */
@@ -30,7 +34,7 @@
 }
 
 .input-message {
-    @apply mt-2 text-xs text-red-600 dark:text-red-400;
+    @apply mt-2 text-xs text-red-600;
 }
 
 .input-select {
