--- a/css/global.css
+++ b/css/global.css
@@ -36,3 +36,15 @@
 .input-message {
     @apply mt-2 text-xs text-red-600;
 }
+
+/** Alert. */
+.alert-success {
+    @apply bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-sm p-2;
+}
+.alert-info {
+    @apply bg-blue-100 border border-blue-200 text-sm text-blue-800 rounded-sm p-2;
+}
+
+.alert-danger {
+    @apply bg-red-100 border border-red-200 text-sm text-red-800 rounded-sm p-2;
+}
